--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.1",
     "next": "14.0.3",
+    "nodemailer": "^7.0.6",
     "react": "^18",
     "react-dom": "^18"
   },
